--- a/src/app/views/customer-quotes-list/customer-quotes-list.component.html
+++ b/src/app/views/customer-quotes-list/customer-quotes-list.component.html
@@ -33,7 +33,7 @@
       <div class="col-md-6 col-sm-12">
         <div class="col mb-3">
           <label class="form-label" for="phone">Phone</label>
-          <div>{{customer?.phones}}</div>
+          <div>{{customer?.phones || '-'}}</div>
         </div>
       </div>
 
@@ -45,39 +45,31 @@
 <table class="table table-hover">
   <thead>
     <tr class="table-light">
-      <th>#</th>
-      <th>Customer</th>
-      <th>Type</th>
+      <th>Job Type</th>
+      <th>Job Address</th>
       <th>Date</th>
       <th>Profit</th>
-      <!-- <th>Total Cost</th> -->
-      <!-- <th>Actions</th> -->
+      <th>Value</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let quote of customerQuotes; index as index">
-      <td> {{ index + 1 }} </td>
-      <td> {{ this.customer?.firstName + ' ' + this.customer?.lastName }} </td>
-      <td> {{ quote.type }} </td>
+    <tr *ngFor="let quote of customerQuotes">
+      <td> {{ quote.type || '-' }} </td>
+      <td> {{ quote.jobAddress || '-' }} </td>
       <td> {{ quote.date | date }} </td>
-      <!-- <td> {{ quote.profit.toFixed(2) }} </td> -->
-      <!-- <td> {{ quote.total_cost.toFixed(2) }} </td> -->
-
-      <!-- Actions -->
+      <td> {{ quote.profit }} </td>
+      <td> {{ quote.value }} </td>
       <td class="d-flex">
-        <!-- Button Edit -->
         <button class="btn btn-primary btn-sm me-2" [routerLink]="[ '/customers', customerId, 'quotes', quote.id ]"
           data-bs-toggle="tooltip" data-placement="bottom" title="Edit">
           <i class="bi bi-pencil-fill"></i>
         </button>
-
-        <!-- Duplicate -->
         <button class="btn btn-warning btn-sm me-2" [routerLink]="[ '/quotes/'+quote.type+'s/edit/', quote.id ]"
           data-bs-toggle="tooltip" data-placement="bottom" title="Duplicate">
           <i class="bi bi-stickies-fill"></i>
         </button>
       </td>
     </tr>
-
   </tbody>
 </table>
