--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -33,7 +33,7 @@
   <tbody>
     <tr *ngFor="let quote of quotes; index as index">
       <td> {{ index + 1 }} </td>
-      <td> {{ getCustomerName(quote.idCustomer) }} </td>
+      <td> {{ getCustomerName(quote.customerId) }} </td>
       <td> {{ quote.type }} </td>
       <td> {{ quote.date | date }} </td>
       <!-- <td> {{ quote.profit.toFixed(2) }} </td> -->
