Inclusao e remocao de novas ares no deck take-off.

--- a/src/app/views/deck-quote-edit/dqe-takeoff/dqe-takeoff.component.html
+++ b/src/app/views/deck-quote-edit/dqe-takeoff/dqe-takeoff.component.html
@@ -1,69 +1,106 @@
-<div class="card mb-3" *ngFor="let mainArea of deckQuote?.decking?.mainAreas; let i = index">
-  <div class="card-header"><b>Area {{i+1}}</b></div>
-  <div class="card-body">
-    <div class="row">
-      <div class="col">
-        <div class="mb-3">
-          <label class="form-label" for="width">Width</label>
-          <input type="text" class="form-control" id="width" name="width" [(ngModel)]="mainArea.width">
-        </div>
+<div class="d-flex justify-content-end mb-3">
+
+  <button class="btn btn-outline-primary" id="dropdownMenuButton" data-bs-toggle="dropdown">
+    <i class="bi bi-plus"></i>
+    New
+  </button>
+
+  <ul class="dropdown-menu">
+    <li><a class="dropdown-item" href="javascript:;" (click)="addArea()">Area</a></li>
+    <li><a class="dropdown-item" href="javascript:;" (click)="addLandingArea()">Landing Area</a></li>
+    <li><a class="dropdown-item" href="javascript:;" (click)="addStair()">Stair</a></li>
+  </ul>
+</div>
+
+<div class="row">
+  <div class="col">
+    <div class="card mb-3" *ngFor="let mainArea of deckQuote?.decking?.mainAreas; let i = index">
+      <div class="card-header d-flex justify-content-between align-items-center">
+        <b>Area {{i+1}}</b>
+        <button class="btn btn-outline-danger" (click)="removeArea(mainArea)">
+          <i class="bi bi-trash"></i>
+        </button>
       </div>
-      <div class="col">
-        <div class="mb-3">
-          <label class="form-label" for="depth">Depth</label>
-          <input type="text" class="form-control" id="depth" name="depth" [(ngModel)]="mainArea.depth">
-        </div>
-      </div>
-      <div class="col">
-        <div class="mb-3">
-          <label class="form-label" for="height">Height</label>
-          <input type="text" class="form-control" id="height" name="height" [(ngModel)]="mainArea.height">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-12">
+            <div class="mb-3">
+              <label class="form-label" for="width">Width</label>
+              <input type="text" class="form-control" id="width" name="width" [(ngModel)]="mainArea.width">
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="mb-3">
+              <label class="form-label" for="depth">Depth</label>
+              <input type="text" class="form-control" id="depth" name="depth" [(ngModel)]="mainArea.depth">
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="mb-3">
+              <label class="form-label" for="height">Height</label>
+              <input type="text" class="form-control" id="height" name="height" [(ngModel)]="mainArea.height">
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="card mb-3" *ngFor="let ladingArea of deckQuote?.decking?.ladingAreas; let i = index">
-  <div class="card-header"><b>Landing Area {{i+1}}</b></div>
-  <div class="card-body">
-    <div class="row">
-      <div class="col">
-        <div class="mb-3">
-          <label class="form-label" for="width">Width</label>
-          <input type="text" class="form-control" id="width" name="width" [(ngModel)]="ladingArea.width">
-        </div>
+  <div class="col">
+    <div class="card mb-3" *ngFor="let ladingArea of deckQuote?.decking?.ladingAreas; let i = index">
+      <div class="card-header d-flex justify-content-between align-items-center">
+        <b>Landing Area {{i+1}}</b>
+        <button class="btn btn-outline-danger" (click)="removeLandingArea(ladingArea)">
+          <i class="bi bi-trash"></i>
+        </button>
       </div>
-      <div class="col">
-        <div class="mb-3">
-          <label class="form-label" for="depth">Depth</label>
-          <input type="text" class="form-control" id="depth" name="depth" [(ngModel)]="ladingArea.depth">
-        </div>
-      </div>
-      <div class="col">
-        <div class="mb-3">
-          <label class="form-label" for="height">Height</label>
-          <input type="text" class="form-control" id="height" name="height" [(ngModel)]="ladingArea.height">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-12">
+            <div class="mb-3">
+              <label class="form-label" for="width">Width</label>
+              <input type="text" class="form-control" id="width" name="width" [(ngModel)]="ladingArea.width">
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="mb-3">
+              <label class="form-label" for="depth">Depth</label>
+              <input type="text" class="form-control" id="depth" name="depth" [(ngModel)]="ladingArea.depth">
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="mb-3">
+              <label class="form-label" for="height">Height</label>
+              <input type="text" class="form-control" id="height" name="height" [(ngModel)]="ladingArea.height">
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<div class="card mb-3" *ngFor="let stair of deckQuote?.decking?.stairs; let i = index">
-  <div class="card-header"><b>Landing Area {{i+1}}</b></div>
-  <div class="card-body">
-    <div class="row">
-      <div class="col">
-        <div class="mb-3">
-          <label class="form-label" for="width">Width</label>
-          <input type="text" class="form-control" id="width" name="width" [(ngModel)]="stair.width">
-        </div>
+  <div class="col">
+    <div class="card mb-3" *ngFor="let stair of deckQuote?.decking?.stairs; let i = index">
+      <div class="card-header d-flex justify-content-between align-items-center">
+        <b>Stair {{i+1}}</b>
+        <button class="btn btn-outline-danger" (click)="removeStair(stair)">
+          <i class="bi bi-trash"></i>
+        </button>
       </div>
-      <div class="col">
-        <div class="mb-3">
-          <label class="form-label" for="riser">Riser</label>
-          <input type="text" class="form-control" id="riser" name="riser" [(ngModel)]="stair.riser">
+      <div class="card-body">
+        <div class="row">
+          <div class="col-12">
+            <div class="mb-3">
+              <label class="form-label" for="width">Width</label>
+              <input type="text" class="form-control" id="width" name="width" [(ngModel)]="stair.width">
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="mb-3">
+              <label class="form-label" for="riser">Riser</label>
+              <input type="text" class="form-control" id="riser" name="riser" [(ngModel)]="stair.riser">
+            </div>
+          </div>
         </div>
       </div>
     </div>
