--- a/src/app/views/deck-quote-edit/dqe-order/dqe-order.component.html
+++ b/src/app/views/deck-quote-edit/dqe-order/dqe-order.component.html
@@ -1,1 +1,24 @@
-<p>dqe-order works!</p>
+<div class="p-2 text-center h4">Decking Board</div>
+<table class="table table-hover mb-3">
+  <thead>
+    <tr class="table-light text-center">
+      <th>Quantity</th>
+      <th>Material</th>
+      <th>Price</th>
+      <th>Total</th>
+    </tr>
+  </thead>
+  <tbody *ngIf="deckQuote 
+      && deckQuote.deckingBoardSpecs 
+      && deckQuote.deckingBoardSpecs.catalogsSpec 
+      && deckQuote.deckingBoardSpecs.selectedSpecIndex != undefined
+      && deckQuote.deckingBoardSpecs.catalogsSpec[deckQuote.deckingBoardSpecs.selectedSpecIndex]">
+    <tr
+      *ngFor="let material of deckQuote.deckingBoardSpecs.catalogsSpec[deckQuote.deckingBoardSpecs.selectedSpecIndex].materials">
+      <td><input type="number" class="form-control" id="qty" name="qty" [(ngModel)]="material.qty"></td>
+      <td>{{material.descSnapshot}}</td>
+      <td>{{material.priceSnapshot}}</td>
+      <td>{{((material.qty || 0) * (material.priceSnapshot || 0)).toFixed(2)}}</td>
+    </tr>
+  </tbody>
+</table>
