--- a/src/app/views/deck-quote-edit/dqe-customer/dqe-customer.component.html
+++ b/src/app/views/deck-quote-edit/dqe-customer/dqe-customer.component.html
@@ -1,76 +1,80 @@
 <div class="row">
+  <div class="col">
 
-  <div class="col-sm-12 col-md-6 mb-3">
-    <label>First Name</label>
-    <div>{{customer?.firstName}}</div>
-  </div>
+    <h4 class="mb-3">Customer Info</h4>
 
-  <div class="col-sm-12 col-md-6 mb-3">
-    <label>Last Name</label>
-    <div>{{customer?.lastName}}</div>
-  </div>
-
-  <div class="col-sm-12 col-md-6 mb-3">
-    <label>Cell Phone</label>
-    <div>{{customer?.phones}}</div>
-  </div>
-
-  <div class="col-sm-12 col-md-6 mb-3">
-    <label>E-mail</label>
-    <div>{{customer?.emails}}</div>
-  </div>
-
-</div>
-
-<div class="row">
-
-  <div class="col d-flex flex-column">
-    <label>Job Address</label>
-    <div class="btn btn-outline-dark mt-2 d-flex align-items-center" (click)="changeJobAddress(customer?.homeAddress)">
-      <i class="bi bi-check-circle-fill me-2" *ngIf="deckQuote?.jobAddress == customer?.homeAddress"></i>
-      <i class="bi bi-circle me-2" *ngIf="deckQuote?.jobAddress != customer?.homeAddress"></i>
-      {{customer?.homeAddress}} <i class="ms-2">(Home Address)</i>
-    </div>
-    <div *ngFor="let a of customer?.jobAddress" class="d-flex">
-      <div class="btn btn-outline-dark mt-2 d-flex align-items-center flex-fill" (click)="changeJobAddress(a)">
-        <i class="bi bi-check-circle-fill me-2" *ngIf="deckQuote?.jobAddress == a"></i>
-        <i class="bi bi-circle me-2" *ngIf="deckQuote?.jobAddress != a"></i>
-        {{a}}
-      </div>
-      <button class="btn btn-outline-danger mt-2 mx-2" (click)="removeJobAddress(a)">
-        <i class="bi bi-trash"></i>
-      </button>
-    </div>
-    <div class="btn btn-outline-dark mt-2 d-flex align-items-center" data-bs-toggle="modal"
-      data-bs-target="#addNewAddressModal">
-      <i class="bi bi-plus me-2"></i>
-      New Job Address
+    <div class="mb-3">
+      <label>First Name</label>
+      <div>{{customer?.firstName}}</div>
     </div>
 
-    <div class="modal fade" id="addNewAddressModal" tabindex="-1">
-      <div class="modal-dialog modal-dialog-centered">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Add new job address</h5>
-            <button class="btn-close" data-bs-dismiss="modal"></button>
-          </div>
+    <div class="mb-3">
+      <label>Last Name</label>
+      <div>{{customer?.lastName}}</div>
+    </div>
 
-          <div class="modal-body">
-            <div class="my-2">
-              <input type="text" class="form-control" id="newAddress" name="newAddress" [(ngModel)]="newAddress"
-                placeholder="Type a new job address">
-            </div>
-          </div>
+    <div class="mb-3">
+      <label>Cell Phone</label>
+      <div>{{customer?.phones}}</div>
+    </div>
 
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
-            <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="addNewAddress()">Yes</button>
+    <div class="mb-3">
+      <label>E-mail</label>
+      <div>{{customer?.emails}}</div>
+    </div>
+  </div>
+
+  <div class="col">
+    <div class="row">
+      <h4 class="mb-3">Job Address</h4>
+      <div class="col d-flex flex-column">
+        <div class="btn btn-outline-dark mt-2 d-flex align-items-center"
+          (click)="changeJobAddress(customer?.homeAddress)">
+          <i class="bi bi-check-circle-fill me-2" *ngIf="deckQuote?.jobAddress == customer?.homeAddress"></i>
+          <i class="bi bi-circle me-2" *ngIf="deckQuote?.jobAddress != customer?.homeAddress"></i>
+          {{customer?.homeAddress}} <i class="ms-2">(Home Address)</i>
+        </div>
+        <div *ngFor="let a of customer?.jobAddress" class="d-flex">
+          <div class="btn btn-outline-dark mt-2 d-flex align-items-center flex-fill" (click)="changeJobAddress(a)">
+            <i class="bi bi-check-circle-fill me-2" *ngIf="deckQuote?.jobAddress == a"></i>
+            <i class="bi bi-circle me-2" *ngIf="deckQuote?.jobAddress != a"></i>
+            {{a}}
           </div>
+          <button class="btn btn-outline-danger mt-2 mx-2" (click)="removeJobAddress(a)">
+            <i class="bi bi-trash"></i>
+          </button>
+        </div>
+        <div class="btn btn-outline-dark mt-2 d-flex align-items-center" data-bs-toggle="modal"
+          data-bs-target="#addNewAddressModal">
+          <i class="bi bi-plus me-2"></i>
+          New Job Address
         </div>
       </div>
     </div>
   </div>
+</div>
 
 
 
+<div class="modal fade" id="addNewAddressModal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Add new job address</h5>
+        <button class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+
+      <div class="modal-body">
+        <div class="my-2">
+          <input type="text" class="form-control" id="newAddress" name="newAddress" [(ngModel)]="newAddress"
+            placeholder="Type a new job address">
+        </div>
+      </div>
+
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal" (click)="addNewAddress()">Yes</button>
+      </div>
+    </div>
+  </div>
 </div>
