--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -21,10 +21,11 @@
 <table class="table table-hover">
   <thead>
     <tr class="table-light">
-      <th >#</th>
+      <!-- <th >#</th> -->
       <th >Customer</th>
       <th >Type</th>
-      <th >Date</th>
+      <th >Created At</th>
+      <th >Updated At</th>
       <!-- <th >Profit</th> -->
       <!-- <th >Total Cost</th> -->
       <th >Actions</th>
@@ -32,10 +33,11 @@
   </thead>
   <tbody>
     <tr *ngFor="let quote of quotes; index as index">
-      <td> {{ index + 1 }} </td>
+      <!-- <td> {{ index + 1 }} </td> -->
       <td> {{ getCustomerName(quote.customerId) }} </td>
       <td> {{ quote.type }} </td>
-      <td> {{ quote.date | date }} </td>
+      <td> {{ quote.createdAt | date }} </td>
+      <td> {{ quote.updatedAt | date }} </td>
       <!-- <td> {{ quote.profit.toFixed(2) }} </td> -->
       <!-- <td> {{ quote.total_cost.toFixed(2) }} </td> -->
 
