--- a/src/app/views/deck-quote-edit/dqe-customer/dqe-customer.component.html
+++ b/src/app/views/deck-quote-edit/dqe-customer/dqe-customer.component.html
@@ -3,24 +3,36 @@
 
     <h4 class="mb-3">Customer Info</h4>
 
-    <div class="mb-3">
-      <label>First Name</label>
-      <div>{{customer?.firstName}}</div>
-    </div>
+    <div class="row">
 
-    <div class="mb-3">
-      <label>Last Name</label>
-      <div>{{customer?.lastName}}</div>
-    </div>
+      <div class="col-sm-12 col-md-6">
+        <div class="mb-3">
+          <label>First Name</label>
+          <div>{{customer?.firstName}}</div>
+        </div>
+      </div>
 
-    <div class="mb-3">
-      <label>Cell Phone</label>
-      <div>{{customer?.phones}}</div>
-    </div>
+      <div class="col-sm-12 col-md-6">
+        <div class="mb-3">
+          <label>Last Name</label>
+          <div>{{customer?.lastName}}</div>
+        </div>
+      </div>
 
-    <div class="mb-3">
-      <label>E-mail</label>
-      <div>{{customer?.emails}}</div>
+      <div class="col-sm-12 col-md-6">
+        <div class="mb-3">
+          <label>Cell Phone</label>
+          <div>{{customer?.phones}}</div>
+        </div>
+      </div>
+
+      <div class="col-sm-12 col-md-6">
+        <div class="mb-3">
+          <label>E-mail</label>
+          <div>{{customer?.emails}}</div>
+        </div>
+      </div>
+
     </div>
   </div>
 
