--- a/src/app/views/customer-list/customer-list.component.html
+++ b/src/app/views/customer-list/customer-list.component.html
@@ -1,4 +1,3 @@
-
 <div class="d-flex mb-5">
   <div class="border-bottom flex-fill pb-2">
     <h2>Customers</h2>
@@ -16,11 +15,11 @@
 <table class="table table-hover">
   <thead>
     <tr class="table-light">
-      <th >Name</th>
-      <th >Address</th>
-      <th >Email</th>
-      <th >Phone</th>
-      <th >Actions</th>
+      <th>Name</th>
+      <th>Address</th>
+      <th>Email</th>
+      <th>Phone</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -31,13 +30,12 @@
       <td> {{ customer.phones }} </td>
       <td class="d-flex">
 
-        <button class="btn btn-primary btn-sm me-2" [routerLink]="[ '/customers', customer.id ]" 
-        data-toggle="tooltip" data-placement="bottom" title="Edit">
+        <button class="btn btn-outline-primary btn-sm me-2" [routerLink]="[ '/customers', customer.id ]" title="Edit">
           <i class="bi bi-pencil-fill"></i>
         </button>
-        
-        <button class="btn btn-success btn-sm me-2" [routerLink]="[ '/customers', customer.id, 'quotes' ]"
-        data-toggle="tooltip" data-placement="bottom" title="Quotes">
+
+        <button class="btn btn-outline-success btn-sm me-2" [routerLink]="[ '/customers', customer.id, 'quotes' ]"
+          title="Quotes">
           <i class="bi bi-currency-dollar"></i>
         </button>
 
