--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -22,13 +22,13 @@
   <thead>
     <tr class="table-light">
       <!-- <th >#</th> -->
-      <th >Customer</th>
-      <th >Type</th>
-      <th >Created At</th>
-      <th >Updated At</th>
-      <!-- <th >Profit</th> -->
-      <!-- <th >Total Cost</th> -->
-      <th >Actions</th>
+      <th>Customer</th>
+      <th>Type</th>
+      <th>Created At</th>
+      <th>Updated At</th>
+      <th>Value</th>
+      <th>Profit</th>
+      <th>Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -38,19 +38,20 @@
       <td> {{ quote.type }} </td>
       <td> {{ quote.createdAt | date }} </td>
       <td> {{ quote.updatedAt | date }} </td>
-      <!-- <td> {{ quote.profit.toFixed(2) }} </td> -->
-      <!-- <td> {{ quote.total_cost.toFixed(2) }} </td> -->
+      <td> {{ quote.value?.toFixed(2) }} </td>
+      <td> {{ quote.profit?.toFixed(2) }} </td>
 
       <!-- Actions -->
       <td class="d-flex">
         <!-- Button Edit -->
-        <button class="btn btn-primary btn-sm me-2" [routerLink]="[ '/quotes/'+quote.type+'s/', quote.id ]">
+        <button class="btn btn-outline-primary btn-sm me-2" title="Edit"
+          [routerLink]="[ '/customers', quote.customerId ,'quotes', quote.id ]">
           <i class="bi bi-pencil-fill"></i>
         </button>
 
         <!-- Button Duplicate -->
-        <button class="btn btn-warning btn-sm me-2" [routerLink]="[ '/quotes/'+quote.type+'s/', quote.id ]">
-          <i class="bi bi-stickies-fill"></i>
+        <button class="btn btn-outline-secondary btn-sm me-2" title="Duplicate">
+          <i class="bi bi-files"></i>
         </button>
 
         <!-- Button Delete -->
