Inicio do desenvolvimento do menu material order

--- a/src/app/views/deck-quote-edit/dqe-estimate/dqe-estimate.component.html
+++ b/src/app/views/deck-quote-edit/dqe-estimate/dqe-estimate.component.html
@@ -1,6 +1,6 @@
 <div class="d-flex flex-column align-items-center">
 
-  <h4>Material</h4>
+  <h4 class="mb-3">Material</h4>
 
   <table class="table table-hover mb-3">
     <thead>
@@ -116,7 +116,38 @@
     </tbody>
   </table>
 
-  <h4>Extra Material</h4>
+  <h4 class="mb-3">Extra Material</h4>
+
+  <table class="table table-hover mb-3">
+    <thead>
+      <tr class="table-light">
+        <th colspan="2">Material</th>
+        <th class="text-center">Cost</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>
+          <input type="text" class="form-control form-control-sm"><!-- id="x" name="x" [(ngModel)]="x" -->
+        </td>
+        <td class="text-center">
+          <input type="text" class="form-control form-control-sm"><!-- id="x" name="x" [(ngModel)]="x" -->
+        </td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>
+          <input type="text" class="form-control form-control-sm"><!-- id="x" name="x" [(ngModel)]="x" -->
+        </td>
+        <td class="text-center">
+          <input type="text" class="form-control form-control-sm"><!-- id="x" name="x" [(ngModel)]="x" -->
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <h4 class="mb-3">Other Costs</h4>
 
   <table class="table table-hover mb-3">
     <thead>
