--- a/src/app/views/deck-quote-edit/dqe-order/dqe-order.component.html
+++ b/src/app/views/deck-quote-edit/dqe-order/dqe-order.component.html
@@ -1,143 +1,172 @@
-<div class="p-2 text-center h4">Board</div>
-<table class="table table-hover mb-3">
-  <thead>
-    <tr class="table-light text-center">
-      <th>Quantity</th>
-      <th>Material</th>
-      <th>Price</th>
-      <th>Total</th>
-    </tr>
-  </thead>
-  <tbody *ngIf="deckQuote 
+<div class="d-flex justify-content-around my-3">
+  <button type="button" class="btn" [class.btn-primary]="menu == 'board'" [class.btn-light]="menu != 'board'" (click)="menu = 'board'">Board</button>
+  <button type="button" class="btn" [class.btn-primary]="menu == 'railing'" [class.btn-light]="menu != 'railing'" (click)="menu = 'railing'">Railing</button>
+  <button type="button" class="btn" [class.btn-primary]="menu == 'pressure treated'" [class.btn-light]="menu != 'pressure treated'" (click)="menu = 'pressure treated'">Pressure Treated</button>
+  <button type="button" class="btn" [class.btn-primary]="menu == 'structural'" [class.btn-light]="menu != 'structural'" (click)="menu = 'structural'">Structural</button>
+  <button type="button" class="btn" [class.btn-primary]="menu == 'finishing'" [class.btn-light]="menu != 'finishing'" (click)="menu = 'finishing'">Finishing</button>
+  <button type="button" class="btn" [class.btn-primary]="menu == 'rain scape'" [class.btn-light]="menu != 'rain scape'" (click)="menu = 'rain scape'">Rain Scape</button>
+</div>
+
+<div *ngIf="menu == 'board'">
+  <div class="p-2 text-center h4">Board</div>
+  <table class="table table-hover mb-3">
+    <thead>
+      <tr class="table-light text-center">
+        <th>Quantity</th>
+        <th>Material</th>
+        <th>Price</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody *ngIf="deckQuote 
       && deckQuote.boardSpecs 
       && deckQuote.boardSpecs.catalogsSpec 
       && deckQuote.boardSpecs.selectedSpecIndex != undefined
       && deckQuote.boardSpecs.catalogsSpec[deckQuote.boardSpecs.selectedSpecIndex]">
-    <tr *ngFor="let material of deckQuote.boardSpecs.catalogsSpec[deckQuote.boardSpecs.selectedSpecIndex].materials">
-      <td><input type="number" class="form-control" id="qty" name="qty" [(ngModel)]="material.qty"></td>
-      <td>{{material.descSnapshot}}</td>
-      <td>{{material.priceSnapshot}}</td>
-      <td>{{((material.qty || 0) * (material.priceSnapshot || 0)).toFixed(2)}}</td>
-    </tr>
-  </tbody>
-</table>
+      <tr *ngFor="let material of deckQuote.boardSpecs.catalogsSpec[deckQuote.boardSpecs.selectedSpecIndex].materials">
+        <td><input type="number" class="form-control" id="qty" name="qty" [(ngModel)]="material.qty"></td>
+        <td>{{material.descSnapshot}}</td>
+        <td>{{material.priceSnapshot}}</td>
+        <td>{{((material.qty || 0) * (material.priceSnapshot || 0)).toFixed(2)}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
-<div class="p-2 text-center h4">Railing</div>
-<table class="table table-hover mb-3">
-  <thead>
-    <tr class="table-light text-center">
-      <th>Quantity</th>
-      <th>Material</th>
-      <th>Price</th>
-      <th>Total</th>
-    </tr>
-  </thead>
-  <tbody *ngIf="deckQuote 
+<div *ngIf="menu == 'railing'">
+  <div class="p-2 text-center h4">Railing</div>
+  <table class="table table-hover mb-3">
+    <thead>
+      <tr class="table-light text-center">
+        <th>Quantity</th>
+        <th>Material</th>
+        <th>Price</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody *ngIf="deckQuote 
       && deckQuote.railingSpecs 
       && deckQuote.railingSpecs.catalogsSpec 
       && deckQuote.railingSpecs.selectedSpecIndex != undefined
       && deckQuote.railingSpecs.catalogsSpec[deckQuote.railingSpecs.selectedSpecIndex]">
-    <tr *ngFor="let material of deckQuote.railingSpecs.catalogsSpec[deckQuote.railingSpecs.selectedSpecIndex].materials">
-      <td><input type="number" class="form-control" id="qty" name="qty" [(ngModel)]="material.qty"></td>
-      <td>{{material.descSnapshot}}</td>
-      <td>{{material.priceSnapshot}}</td>
-      <td>{{((material.qty || 0) * (material.priceSnapshot || 0)).toFixed(2)}}</td>
-    </tr>
-  </tbody>
-</table>
+      <tr
+        *ngFor="let material of deckQuote.railingSpecs.catalogsSpec[deckQuote.railingSpecs.selectedSpecIndex].materials">
+        <td><input type="number" class="form-control" id="qty" name="qty" [(ngModel)]="material.qty"></td>
+        <td>{{material.descSnapshot}}</td>
+        <td>{{material.priceSnapshot}}</td>
+        <td>{{((material.qty || 0) * (material.priceSnapshot || 0)).toFixed(2)}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
-<div class="p-2 text-center h4">Pressure Treated</div>
-<table class="table table-hover mb-3">
-  <thead>
-    <tr class="table-light text-center">
-      <th>Quantity</th>
-      <th>Material</th>
-      <th>Price</th>
-      <th>Total</th>
-    </tr>
-  </thead>
-  <tbody *ngIf="deckQuote 
+
+<div *ngIf="menu == 'pressure treated'">
+  <div class="p-2 text-center h4">Pressure Treated</div>
+  <table class="table table-hover mb-3">
+    <thead>
+      <tr class="table-light text-center">
+        <th>Quantity</th>
+        <th>Material</th>
+        <th>Price</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody *ngIf="deckQuote 
       && deckQuote.pressureTreatedSpecs 
       && deckQuote.pressureTreatedSpecs.catalogsSpec 
       && deckQuote.pressureTreatedSpecs.selectedSpecIndex != undefined
       && deckQuote.pressureTreatedSpecs.catalogsSpec[deckQuote.pressureTreatedSpecs.selectedSpecIndex]">
-    <tr *ngFor="let material of deckQuote.pressureTreatedSpecs.catalogsSpec[deckQuote.pressureTreatedSpecs.selectedSpecIndex].materials">
-      <td><input type="number" class="form-control" id="qty" name="qty" [(ngModel)]="material.qty"></td>
-      <td>{{material.descSnapshot}}</td>
-      <td>{{material.priceSnapshot}}</td>
-      <td>{{((material.qty || 0) * (material.priceSnapshot || 0)).toFixed(2)}}</td>
-    </tr>
-  </tbody>
-</table>
+      <tr
+        *ngFor="let material of deckQuote.pressureTreatedSpecs.catalogsSpec[deckQuote.pressureTreatedSpecs.selectedSpecIndex].materials">
+        <td><input type="number" class="form-control" id="qty" name="qty" [(ngModel)]="material.qty"></td>
+        <td>{{material.descSnapshot}}</td>
+        <td>{{material.priceSnapshot}}</td>
+        <td>{{((material.qty || 0) * (material.priceSnapshot || 0)).toFixed(2)}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
-<div class="p-2 text-center h4">Structural</div>
-<table class="table table-hover mb-3">
-  <thead>
-    <tr class="table-light text-center">
-      <th>Quantity</th>
-      <th>Material</th>
-      <th>Price</th>
-      <th>Total</th>
-    </tr>
-  </thead>
-  <tbody *ngIf="deckQuote 
+<div *ngIf="menu == 'structural'">
+  <div class="p-2 text-center h4">Structural</div>
+  <table class="table table-hover mb-3">
+    <thead>
+      <tr class="table-light text-center">
+        <th>Quantity</th>
+        <th>Material</th>
+        <th>Price</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody *ngIf="deckQuote 
       && deckQuote.structuralSpecs 
       && deckQuote.structuralSpecs.catalogsSpec 
       && deckQuote.structuralSpecs.selectedSpecIndex != undefined
       && deckQuote.structuralSpecs.catalogsSpec[deckQuote.structuralSpecs.selectedSpecIndex]">
-    <tr *ngFor="let material of deckQuote.structuralSpecs.catalogsSpec[deckQuote.structuralSpecs.selectedSpecIndex].materials">
-      <td><input type="number" class="form-control" id="qty" name="qty" [(ngModel)]="material.qty"></td>
-      <td>{{material.descSnapshot}}</td>
-      <td>{{material.priceSnapshot}}</td>
-      <td>{{((material.qty || 0) * (material.priceSnapshot || 0)).toFixed(2)}}</td>
-    </tr>
-  </tbody>
-</table>
+      <tr
+        *ngFor="let material of deckQuote.structuralSpecs.catalogsSpec[deckQuote.structuralSpecs.selectedSpecIndex].materials">
+        <td><input type="number" class="form-control" id="qty" name="qty" [(ngModel)]="material.qty"></td>
+        <td>{{material.descSnapshot}}</td>
+        <td>{{material.priceSnapshot}}</td>
+        <td>{{((material.qty || 0) * (material.priceSnapshot || 0)).toFixed(2)}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
-<div class="p-2 text-center h4">Finishing</div>
-<table class="table table-hover mb-3">
-  <thead>
-    <tr class="table-light text-center">
-      <th>Quantity</th>
-      <th>Material</th>
-      <th>Price</th>
-      <th>Total</th>
-    </tr>
-  </thead>
-  <tbody *ngIf="deckQuote 
+
+<div *ngIf="menu == 'finishing'">
+  <div class="p-2 text-center h4">Finishing</div>
+  <table class="table table-hover mb-3">
+    <thead>
+      <tr class="table-light text-center">
+        <th>Quantity</th>
+        <th>Material</th>
+        <th>Price</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody *ngIf="deckQuote 
       && deckQuote.finishingSpecs 
       && deckQuote.finishingSpecs.catalogsSpec 
       && deckQuote.finishingSpecs.selectedSpecIndex != undefined
       && deckQuote.finishingSpecs.catalogsSpec[deckQuote.finishingSpecs.selectedSpecIndex]">
-    <tr *ngFor="let material of deckQuote.finishingSpecs.catalogsSpec[deckQuote.finishingSpecs.selectedSpecIndex].materials">
-      <td><input type="number" class="form-control" id="qty" name="qty" [(ngModel)]="material.qty"></td>
-      <td>{{material.descSnapshot}}</td>
-      <td>{{material.priceSnapshot}}</td>
-      <td>{{((material.qty || 0) * (material.priceSnapshot || 0)).toFixed(2)}}</td>
-    </tr>
-  </tbody>
-</table>
+      <tr
+        *ngFor="let material of deckQuote.finishingSpecs.catalogsSpec[deckQuote.finishingSpecs.selectedSpecIndex].materials">
+        <td><input type="number" class="form-control" id="qty" name="qty" [(ngModel)]="material.qty"></td>
+        <td>{{material.descSnapshot}}</td>
+        <td>{{material.priceSnapshot}}</td>
+        <td>{{((material.qty || 0) * (material.priceSnapshot || 0)).toFixed(2)}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
-<div class="p-2 text-center h4">Rain Scape</div>
-<table class="table table-hover mb-3">
-  <thead>
-    <tr class="table-light text-center">
-      <th>Quantity</th>
-      <th>Material</th>
-      <th>Price</th>
-      <th>Total</th>
-    </tr>
-  </thead>
-  <tbody *ngIf="deckQuote 
+
+<div *ngIf="menu == 'rain scape'">
+  <div class="p-2 text-center h4">Rain Scape</div>
+  <table class="table table-hover mb-3">
+    <thead>
+      <tr class="table-light text-center">
+        <th>Quantity</th>
+        <th>Material</th>
+        <th>Price</th>
+        <th>Total</th>
+      </tr>
+    </thead>
+    <tbody *ngIf="deckQuote 
       && deckQuote.rainScapeSpecs 
       && deckQuote.rainScapeSpecs.catalogsSpec 
       && deckQuote.rainScapeSpecs.selectedSpecIndex != undefined
       && deckQuote.rainScapeSpecs.catalogsSpec[deckQuote.rainScapeSpecs.selectedSpecIndex]">
-    <tr *ngFor="let material of deckQuote.rainScapeSpecs.catalogsSpec[deckQuote.rainScapeSpecs.selectedSpecIndex].materials">
-      <td><input type="number" class="form-control" id="qty" name="qty" [(ngModel)]="material.qty"></td>
-      <td>{{material.descSnapshot}}</td>
-      <td>{{material.priceSnapshot}}</td>
-      <td>{{((material.qty || 0) * (material.priceSnapshot || 0)).toFixed(2)}}</td>
-    </tr>
-  </tbody>
-</table>
+      <tr
+        *ngFor="let material of deckQuote.rainScapeSpecs.catalogsSpec[deckQuote.rainScapeSpecs.selectedSpecIndex].materials">
+        <td><input type="number" class="form-control" id="qty" name="qty" [(ngModel)]="material.qty"></td>
+        <td>{{material.descSnapshot}}</td>
+        <td>{{material.priceSnapshot}}</td>
+        <td>{{((material.qty || 0) * (material.priceSnapshot || 0)).toFixed(2)}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
